@@ -36,7 +36,7 @@ rm -r -f server/solr/zoo_data
 rm -f server/server.log
 
 ant -f ../build.xml clean
-ant example dist
+ant server dist
 
 rm -r server/solr-webapp/*
 unzip server/webapps/solr.war -d server/solr-webapp/webapp
